--- a/style.css
+++ b/style.css
@@ -476,7 +476,39 @@ h5 {
   margin-top: 1vw;
   margin: 2.7vw 2.7vw;
 }
+.fb {
+  width: 9vw;
+  height: 9vw;
+}
 
+.twt1 {
+  width: 9vw;
+  height: 9vw;
+}
+
+.twt {
+  width: 9vw;
+  height: 9vw;
+}
+.yt {
+  width: 9vw;
+  height: 9vw;
+}
+
+.inst {
+  width: 9vw;
+  height: 9vw;
+}
+
+.lin {
+  width: 9vw;
+  height: 9vw;
+}
+
+.pint {
+  width: 9vw;
+  height: 9vw;
+}
 .fb {
   transition: transform 500ms ease-in-out;
 }
@@ -944,6 +976,10 @@ h5 {
   font-size: 2.9rem;
 }
 
+.trademark {
+  font-size: small;
+}
+
 /* @keyframes animefade {
   0% {
     opacity: 0;
@@ -991,6 +1027,10 @@ h5 {
 
   .navlogo {
     width: 9vw;
+    padding-bottom: 0.1rem;
+  }
+  .mnavlogo {
+    width: 4vw;
     padding-bottom: 0.1rem;
   }
 
@@ -1275,36 +1315,6 @@ h5 {
     display: none;
   }
 
-  .fb {
-    width: 2.1rem;
-    height: 2.1rem;
-  }
-
-  .twt1 {
-    width: 2.1rem;
-    height: 2.1rem;
-  }
-
-  .yt {
-    width: 2.1rem;
-    height: 2.1rem;
-  }
-
-  .inst {
-    width: 2.1rem;
-    height: 2.1rem;
-  }
-
-  .lin {
-    width: 2.1rem;
-    height: 2.1rem;
-  }
-
-  .pint {
-    width: 2.1rem;
-    height: 2.1rem;
-  }
-
   .show25 {
     transform: translateX(0);
     opacity: 1;
@@ -1489,17 +1499,6 @@ h5 {
     display: none;
   }
 
-  .footer {
-    background-color: #ffe63f;
-    height: 9vw;
-    margin-top: 1.5%;
-    margin-right: 1.5%;
-    margin-left: 1.5%;
-    border-top-left-radius: 5vw;
-    border-top-right-radius: 5vw;
-    position: sticky;
-  }
-
   .footflex {
     padding-top: 1.5%;
     display: flex;
@@ -1512,12 +1511,12 @@ h5 {
     font-family: "Carter One", cursive;
     font-size: 0.45rem;
     width: 4.1rem;
-    height: 1rem;
+    height: 1.5rem;
+    padding: 1% 1%;
     border-radius: 5vw;
     text-align: center;
     align-items: center;
   }
-
   .videoicon {
     width: 0.5rem;
     height: 0.5rem;
@@ -1529,14 +1528,50 @@ h5 {
   }
 
   .sendicon {
-    width: 0.8rem;
-    height: 0.8rem;
-    padding-bottom: 1vw;
+    width: 2rem;
+    height: 2rem;
+    padding-bottom: 1.5rem;
+  }
+  .sendbtn {
+    color: #e23945;
+    width: 3vw;
+    height: 5vw;
+    display: grid;
+    justify-content: center;
+    margin: 0.5vw 0.5vw;
   }
 
   .contactform {
     background-color: transparent;
+    width: 13vw;
     border: none;
+  }
+  .formflex {
+    width: 13vw;
+    display: flex;
+    justify-content: center;
+  }
+  .footer {
+    background-color: #ffe63f;
+    height: 13vw;
+    margin-top: 1.5%;
+    margin-right: 1.5%;
+    margin-left: 1.5%;
+    border-top-left-radius: 5vw;
+    border-top-right-radius: 5vw;
+    position: sticky;
+  }
+  .trademark {
+    font-size: xx-small;
+  }
+  .cc {
+    display: flex;
+    justify-content: center;
+    margin: 0% 0%;
+    padding-top: 1rem;
+  }
+  .cookieprf {
+    display: none;
   }
 }
 
