--- a/style.css
+++ b/style.css
@@ -234,7 +234,6 @@ h5 {
 
 .mtxtbox {
   background-color: rgb(255, 230, 87, 0.5);
-  backdrop-filter: blur(7px) saturate(180%);
   border-radius: 100vw;
   width: 65vw;
   border: none;
@@ -476,6 +475,7 @@ h5 {
   margin-top: 1vw;
   margin: 2.7vw 2.7vw;
 }
+
 .fb {
   width: 9vw;
   height: 9vw;
@@ -490,6 +490,7 @@ h5 {
   width: 9vw;
   height: 9vw;
 }
+
 .yt {
   width: 9vw;
   height: 9vw;
@@ -509,6 +510,7 @@ h5 {
   width: 9vw;
   height: 9vw;
 }
+
 .fb {
   transition: transform 500ms ease-in-out;
 }
@@ -646,11 +648,6 @@ h5 {
   width: 10px;
   height: 10px;
   border-radius: 100%;
-}
-
-.navbarburger {
-  fill: red;
-  margin-top: -2.75px;
 }
 
 .sendbtn {
@@ -949,6 +946,7 @@ h5 {
 
 .navbar-toggler {
   border: none;
+  outline: none;
 }
 
 .hidden25 {
@@ -980,6 +978,20 @@ h5 {
   font-size: small;
 }
 
+.btn-close {
+  box-sizing: content-box;
+  width: 1em;
+  height: 1em;
+  padding: 0.25em 0.25em;
+  color: #000;
+  background: transparent
+    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff0000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e")
+    center/1em auto no-repeat;
+  border: 0;
+  border-radius: 0.25rem;
+  opacity: 1;
+}
+
 /* @keyframes animefade {
   0% {
     opacity: 0;
@@ -1002,13 +1014,7 @@ h5 {
   }
 } */
 
-@media (prefers-reduced-motion) {
-  .hidden {
-    transition: none;
-  }
-}
-
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 500px) {
   * {
     margin: 0;
     padding: 0;
@@ -1029,6 +1035,7 @@ h5 {
     width: 9vw;
     padding-bottom: 0.1rem;
   }
+
   .mnavlogo {
     width: 4vw;
     padding-bottom: 0.1rem;
@@ -1207,7 +1214,7 @@ h5 {
   }
 
   .hidden16 {
-    transform: translateX(15vw);
+    transform: translateX(11vw);
     opacity: 0;
     transition: all 500ms;
   }
@@ -1471,7 +1478,7 @@ h5 {
   .card-title {
     font-family: "Ubuntu", sans-serif;
     color: white;
-    font-size: 0.49rem;
+    font-size: 0.55rem;
   }
 
   .back {
@@ -1517,6 +1524,7 @@ h5 {
     text-align: center;
     align-items: center;
   }
+
   .videoicon {
     width: 0.5rem;
     height: 0.5rem;
@@ -1532,6 +1540,7 @@ h5 {
     height: 2rem;
     padding-bottom: 1.5rem;
   }
+
   .sendbtn {
     color: #e23945;
     width: 3vw;
@@ -1546,11 +1555,13 @@ h5 {
     width: 13vw;
     border: none;
   }
+
   .formflex {
     width: 13vw;
     display: flex;
     justify-content: center;
   }
+
   .footer {
     background-color: #ffe63f;
     height: 13vw;
@@ -1561,22 +1572,162 @@ h5 {
     border-top-right-radius: 5vw;
     position: sticky;
   }
+
   .trademark {
     font-size: xx-small;
   }
+
   .cc {
     display: flex;
     justify-content: center;
     margin: 0% 0%;
     padding-top: 1rem;
   }
+
   .cookieprf {
     display: none;
   }
 }
 
-@media only screen and (min-width: 481px) and (max-width: 768px) {
+@media only screen and (min-width: 501px) and (max-width: 900px) {
   body {
+    background-color: #febe38;
+  }
+  .cookieprf {
     display: none;
+  }
+  .trademark {
+    font-size: x-small;
+  }
+
+  .cc {
+    display: flex;
+    justify-content: center;
+    margin: 0% 0%;
+    padding-top: 1.3rem;
+  }
+  .mhide {
+    display: none;
+  }
+
+  .sendicon {
+    width: 3.5rem;
+    height: 3.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .videoicon {
+    width: 1.7rem;
+    height: 1.7rem;
+    padding-bottom: 0.5vw;
+  }
+  .sendbtn {
+    color: #e23945;
+    width: 6vw;
+    height: 6vw;
+    display: grid;
+    justify-content: center;
+    margin: 0.5vw 0.5vw;
+  }
+
+  .contactform {
+    background-color: transparent;
+    width: 13vw;
+    border: none;
+  }
+
+  .formflex {
+    width: 13vw;
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer {
+    background-color: #ffe63f;
+    height: 13vw;
+    margin-top: 1.5%;
+    margin-right: 1.5%;
+    margin-left: 1.5%;
+    border-top-left-radius: 5vw;
+    border-top-right-radius: 5vw;
+    position: sticky;
+  }
+  .likebutton {
+    display: none;
+  }
+
+  .heart {
+    display: none;
+  }
+
+  .footflex {
+    padding-top: 1.5%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .cbutton1 {
+    border-color: transparent;
+    color: #0c0404;
+    font-family: "Carter One", cursive;
+    font-size: 0.9rem;
+    width: 8.5rem;
+    height: 4rem;
+    padding: 1% 1%;
+    border-radius: 5vw;
+    text-align: center;
+    align-items: center;
+  }
+  .mnavlogo {
+    width: 4vw;
+    /* padding-bottom: 0.1rem; */
+    padding-top: 1.7vw;
+  }
+  .fb {
+    width: 9vw;
+    height: 9vw;
+  }
+
+  .twt1 {
+    width: 9vw;
+    height: 9vw;
+  }
+
+  .twt {
+    width: 9vw;
+    height: 9vw;
+  }
+
+  .yt {
+    width: 9vw;
+    height: 9vw;
+  }
+
+  .inst {
+    width: 9vw;
+    height: 9vw;
+  }
+
+  .lin {
+    width: 9vw;
+    height: 9vw;
+  }
+
+  .pint {
+    width: 9vw;
+    height: 9vw;
+  }
+  .mh1 {
+    color: white;
+    padding: 0% 5.9%;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 2.5rem;
+  }
+
+  .mh2 {
+    color: white;
+    padding: 0% 5.9%;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 1.79rem;
   }
 }
